


0.1.1

    Fixed several bugs raised by James Antill <james@and.org>:
    1. HEAD didn't get an Accept: header added like GET.
    2. HEAD requests did not use the cache.
    3. GET requests with Range: headers would erroneously return a full cached response.
    4. Subsequent requests to resources that had timed out would raise an exception.
    And one feature request for 'method' to default to GET.

    Xavier Verges Farrero <xavier_verges@es.ibm.com> supplied
    what I needed to make the library work with Python 2.3.

0.1 Rev 86 
    
    Initial Release
